--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ publish:library:
   resource_group: library
   rules:
     - if: $CI_COMMIT_TAG =~ /^v.*$/
+    - if: $CI_PIPELINE_SOURCE == "web" && $PIPELINE == "publish"
   before_script:
     - corepack enable
     - corepack prepare pnpm@latest-10 --activate
